--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -23,4 +23,6 @@ activemq.queue.name=IN_QUEUE
 spring.jackson.time-zone=Brazil/East
 spring.jackson.locale=pt-BR
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 server.port=9192
